# annals

./: .gitattributes  .gitignore  Cargo.toml  README.md
logger/: Cargo.toml  diesel.toml
logger/migrations/2023-06-10-122138_create_irc_users/: down.sql  up.sql
logger/migrations/2023-06-10-122141_create_irc_servers/: down.sql  up.sql
logger/migrations/2023-06-10-122200_create_irc_logs/: down.sql  up.sql
logger/src/: config.rs  main.rs
logger/src/db/: mod.rs  models.rs  schema.rs
pwa/: Cargo.toml  Trunk.toml
pwa/src/: main.rs  pwa.rs
pwa/static/: index.html
pwa/static/css/: _colors.scss  index.scss  uikit.scss
pwa/static/css/uikit/: uikit-theme.scss
