[package]
name = "annals-logger"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
readme  = "../README.md"
authors = [
	"Aki Van Ness"
]
description = "IRC Logger and log web frontend"

[dependencies]
axum   = { version = "0.6.18", features = ["tracing", "ws", "http2", "macros"] }
diesel = { version = "2.1.0", features = ["postgres", "uuid", "serde_json"]    }

serde      = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.96" }

tokio      = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8",  features = ["full"] }

tracing            = { version = "0.1.37" }
tracing-futures    = { version = "0.2.5"  }
tracing-log        = { version = "0.1.3"  }
tracing-subscriber = { version = "0.3.17" }

futures = { version = "0.3.28" }
uuid    = { version = "1.3.3"  }
clap    = { version = "4.3.2", features = ["default", "derive", "unicode"]       }
redis   = { version = "0.23.0", features = ["tokio", "tokio-util", "tokio-comp"] }
